2003-03-31  Alan Tam <Tam@SiuLung.com>

	* UITypeEditor.cs: Removed.

2003-03-29  Martin Willemoes Hansen <mwh@sysrq.dk>
	* Added stub for System.Windows.Forms/IWindowsFormsEditorService.cs

2003-02-07  Alexandre Pigokine <pigolkine@gmx.de>
	* list.unix	 removed System.Windows.Forms\Font.cs

2003-01-31  John Sohn <jsohn@columbus.rr.com>
	* README: updated for latest WineLib and Mono

2003-01-15  Duncan Mak  <duncan@ximian.com>

       * Make it not spam all those warnings. Blocking errors 0108 and also
       0114.

2002-12-10  Jeroen Janssen <japj@darius.demon.nl>
	
	* added ChangeLog
	* fixed MonoTodo compile errors with csc