@@ -20,6 +20,7 @@
 			<arg value="/noconfig"/>
 			<arg value="/r:Accessibility.dll"/>
 			<arg value="/r:System.dll"/>
+			<arg value="/r:System.Xml.dll"/>
 			<arg value="/r:System.Drawing.dll"/>
 			<arg value="/unsafe"/>
 			<sources>
