@@ -1,3 +1,9 @@
+
+Sat May 31 12:21:21 CEST 2003 Paolo Molaro <lupus@ximian.com>
+
+	* System.Resources/ResXResourceReader.cs: get simple reading and error
+	checks working.
+
 2003-03-31  Alan Tam <Tam@SiuLung.com>
 
 	* UITypeEditor.cs: Removed.
